# GanShmuel2.0

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  PORTFOLIO_SHOWCASE.md  PROJECT.md  README.md  TECH_DEBT.md  docker-compose.ci.yml  docker-compose.yml
.github/: dependabot.yml
billing-service/: .env.example  .flake8  BILLING-1_SUMMARY.md  BILLING-4_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  SKIPPED_TESTS.md  billingdb.sql  docker-compose.yml  pyproject.toml
billing-service/docs/: sequence-diagrams.md
billing-service/src/: config.py  database.py  dependencies.py  main.py  metrics.py
billing-service/src/models/: database.py  repositories.py  schemas.py
billing-service/src/routers/: bills.py  health.py  providers.py  rates.py  trucks.py
billing-service/src/services/: bill_service.py  weight_client.py
billing-service/src/utils/: datetime_utils.py  excel_handler.py  exceptions.py
billing-service/tests/: __init__.py  conftest.py  test_bill_service.py  test_bills_api.py  test_database_models.py  test_datetime_utils.py  test_excel_handler.py  test_exceptions.py  test_providers_api.py  test_rates_api.py  test_rates_error_handling.py  test_repositories.py  test_schemas.py  test_trucks_api.py  test_weight_client.py
frontend/: .env.example  .eslintrc.json  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.json  vite.config.ts
integration_testing_logs/: 10_Install UV.txt  11_Add UV to PATH.txt  12_Install weight-service test dependencies.txt  13_Run E2E integration tests.txt  15_Stop services.txt  1_Set up job.txt  27_Post Set up Python for E2E tests.txt  28_Post Cache Docker layers.txt  29_Post Set up Docker Buildx.txt  2_Checkout code.txt  30_Post Checkout code.txt  31_Complete job.txt  3_Set up Docker Buildx.txt  4_Cache Docker layers.txt  5_Create .env file for Docker Compose.txt  6_Build and start services with Docker Compose.txt  7_Wait for services via API Gateway.txt  8_Populate test data.txt  9_Set up Python for E2E tests.txt  system.txt
populate-data/: Dockerfile  README.md  populate_test_data.py  pyproject.toml
provider-registration-service/: .env.example  ALEMBIC_SETUP_SUMMARY.md  API.md  CHANGELOG.md  DELIVERABLES_SUMMARY.md  DEPLOYMENT.md  DRY_BEFORE_AFTER_COMPARISON.md  DRY_QUICK_REFERENCE.md  DRY_REFACTORING_REPORT.md  Dockerfile  Dockerfile.test  GET_ENDPOINT_TEST_COVERAGE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  MIGRATIONS.md  MIGRATION_QUICK_REFERENCE.md  MIGRATION_VALIDATION_CHECKLIST.md  OPERATIONS.md  OPTIMISTIC_LOCKING_REPORT.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_COMPLETION_REPORT.md  PHASE_2_TASK_2.2_COMPLETION_REPORT.md  PHASE_2_TASK_2_3_COMPLETION_REPORT.md  PHASE_3_COMPLETION_REPORT.md  PHASE_3_TASK_3.2_COMPLETION_REPORT.md  QUICK_TEST_REFERENCE.md  RATE_LIMITING.md  README.md  README_SQL_INJECTION_FIX.md  RETRY_LOGIC_IMPLEMENTATION_REPORT.md  RETRY_TESTING_COMMANDS.md  SECURITY.md  SECURITY_AUDIT_SQL_INJECTION.md  SECURITY_SCAN_REPORT.txt  SQL_INJECTION_FIX_COMPARISON.md  SQL_INJECTION_FIX_REPORT.md  TESTING_PHASE_2_COMPLETE.md  TEST_COVERAGE_SUMMARY.md  alembic.ini  analyze_duplication.py  (+7 more)
provider-registration-service/alembic/: env.py
provider-registration-service/alembic/versions/: 000_initial_schema.py  001_add_version_column.py  002_add_rejection_reason.py
provider-registration-service/src/: __init__.py  config.py  database.py  logging_config.py  main.py  metrics.py  middleware.py  rate_limiting.py
provider-registration-service/src/auth/: __init__.py  jwt_handler.py
provider-registration-service/src/models/: __init__.py  orm.py  schemas.py
provider-registration-service/src/routers/: __init__.py  auth.py  candidates.py  health.py
provider-registration-service/src/services/: __init__.py  billing_client.py  candidate_service.py  candidate_service.py.backup
provider-registration-service/tests/: __init__.py  conftest.py  test_api_contract.py  test_auth_contract.py  test_auth_security.py  test_billing_integration.py  test_billing_retry.py  test_candidate_response_building.py  test_concurrency.py  test_edge_cases.py  test_full_workflow_integration.py  test_get_candidate_endpoint.py  test_performance.py  test_rejection_endpoint.py  test_schemas.py  test_sql_injection.py
scripts/: README.md  generate-secrets.sh  generate-traefik-auth.sh
shift-service/: .env.example  Dockerfile  pyproject.toml
shift-service/data/: 01-init-schema.sql
shift-service/src/: __init__.py  config.py  database.py  main.py  metrics.py
shift-service/src/models/: schemas.py
shift-service/src/routers/: health.py  shifts.py
shift-service/tests/: __init__.py  conftest.py  test_health.py  test_main.py  test_operators_api.py  test_shifts_api.py
weight-service/: .env.example  Dockerfile  IMPLEMENTATION_SUMMARY.md  ROUTER_TESTS_SUMMARY.md  coverage_output.txt  pyproject.toml
weight-service/alembic/: env.py
weight-service/alembic/versions/: 001_initial_tables.py  002_indexes.py
weight-service/docs/: API_WORKFLOWS.md  ARCHITECTURE_DIAGRAMS.md
weight-service/src/: __init__.py  config.py  database.py  dependencies.py  main.py  metrics.py
weight-service/src/models/: __init__.py  database.py  repositories.py  schemas.py
weight-service/src/routers/: batch.py  health.py  query.py  weight.py
weight-service/src/services/: __init__.py  container_service.py  file_service.py  query_service.py  session_service.py  weight_service.py
weight-service/src/utils/: calculations.py  datetime_utils.py  exceptions.py  validators.py
weight-service/tests/: README_E2E_TESTS.md  conftest.py  test_calculations.py  test_container_service.py  test_datetime_utils.py  test_file_service.py  test_health.py  test_integration.py  test_metrics.py  test_models.py  test_query_service.py  test_real_e2e_api_calls.py  test_routers_batch.py  test_routers_health.py  test_routers_query.py  test_routers_weight.py  test_schemas.py  test_session_service.py  test_validators.py  test_weight_calculations_fix.py  test_weight_service.py
(+35 files in other folders)
