[project]
name = "populate-data"
version = "1.0.0"
description = "Test data population script for Gan Shmuel Weight Management System"
dependencies = [
    "requests>=2.31.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]